--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -68,12 +68,25 @@ section.normal {
 section.imagem {
     background-color: rgba(0, 0, 0, 0.274);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.452);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p{
     padding: 5px;
     display: inline-block;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.534);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01 {
+    background-image: url(imagens/background001.jpg); 
+    background-position: right center;  
+}
+
+section#img02 {
+    background-image: url(imagens/background002.jpg);
 }
 
 footer {
